[package]
name = "nrf52840-npm1300-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-nrf = { version = "0.2.0", features = [
  "defmt",
  "nrf52840",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }
embassy-executor = { version = "0.6.1", features = [
  "task-arena-size-32768",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }

cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

npm1300-rs = { path = "../../", features = ["defmt-03"] }

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "796f6c034a148e1fedb3196a2c73a155f5d0545f" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "796f6c034a148e1fedb3196a2c73a155f5d0545f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "796f6c034a148e1fedb3196a2c73a155f5d0545f" }
